--- a/bse-corporate-announcement-frontend/src/app/app.component.html
+++ b/bse-corporate-announcement-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="navbar navbar-expand-lg navbar-light bg-light px-4 py-2 shadow-sm">
   <a class="navbar-brand fw-bold text-primary" href="#">
-    scan<span class="text-info" style="display:inline-block; transform:rotate(-30deg)">x</span>
+    Market<span class="text-success" style="font-weight:700;">Minds</span>
   </a>
 
   <div class="collapse navbar-collapse justify-content-center">
@@ -9,7 +9,7 @@
         <a routerLink="/" routerLinkActive="active" class="nav-link">Home</a>
       </li>
       <li class="nav-item">
-        <a routerLink="/live" routerLinkActive="active" class="nav-link">Live</a>
+        <a routerLink="/ipo" routerLinkActive="active" class="nav-link">IPO</a>
       </li>
       <li class="nav-item">
         <a routerLink="/news" routerLinkActive="active" class="nav-link">News</a>
@@ -33,5 +33,5 @@
 </header>
 
 <div class="container mt-4">
-  <app-ipo-list></app-ipo-list>
+  <router-outlet></router-outlet>
 </div>
