--- a/bse-corporate-announcement-frontend/src/app/app.component.html
+++ b/bse-corporate-announcement-frontend/src/app/app.component.html
@@ -2,11 +2,10 @@
   <a class="navbar-brand fw-bold text-primary" href="#">
     Market<span class="text-success" style="font-weight:700;">Minds</span>
   </a>
-
   <div class="collapse navbar-collapse justify-content-center">
     <ul class="navbar-nav gap-3">
       <li class="nav-item">
-        <a routerLink="/" routerLinkActive="active" class="nav-link">Home</a>
+        <a routerLink="/stocks" routerLinkActive="active" class="nav-link">Sector Analysis</a>
       </li>
       <li class="nav-item">
         <a routerLink="/ipo" routerLinkActive="active" class="nav-link">IPO</a>
@@ -25,7 +24,6 @@
       </li>
     </ul>
   </div>
-
   <div class="d-flex gap-2">
     <button class="btn btn-outline-secondary">Login</button>
     <button class="btn btn-primary">Open Account</button>
