--- a/stock-screener-frontend/src/app/stocks/stocks.component.html
+++ b/stock-screener-frontend/src/app/stocks/stocks.component.html
@@ -1,18 +1,18 @@
 <div class="mb-4 center-modal-form">
     <div class="mb-2">
-        <input 
-            type="text" 
-            class="form-control" 
-            [(ngModel)]="companyTerm" 
-            name="stockSymbol"
-            (input)="onSymbolInput($event)"
-            placeholder="Enter companyDetails* (e.g., RELIANCE, TCS)"
+        <input type="text" class="form-control" [(ngModel)]="companyTerm" name="stockSymbol"
+            (input)="onSymbolInput($event)" placeholder="Enter companyDetails* (e.g., RELIANCE, TCS)"
             autocomplete="off">
         <!-- <small class="text-muted">Stock will be added automatically after 1 second of no typing</small> -->
     </div>
 </div>
 
-<ul class="search-results" *ngIf="searchResponseHTML" [innerHTML]="searchResponseHTML" (click)="onSearchResultClick($event)"></ul>
+<ul class="search-results" *ngIf="searchResponseHTML" [innerHTML]="searchResponseHTML"
+    (click)="onSearchResultClick($event)"></ul>
+
+<a title="Refresh Indicators" class="refresh-icon" (click)="updateIndicatorData()">
+    <img src="assets/images/icons/refresh.svg" alt="Refresh Indicators" width="24" height="24" />
+</a>
 
 <div class="mb-5">
     <table class="table table-bordered table-striped">
@@ -26,24 +26,21 @@
         <tbody>
             <tr *ngFor="let stock of stocks">
                 <td class="position-relative stock-hover-group">
-                    <div
-                        (mouseenter)="hoveredStock = stock"
-                        (mouseleave)="hoveredStock = null"
-                        style="display: inline-block; position: relative;"
-                    >
+                    <div (mouseenter)="hoveredStock = stock" (mouseleave)="hoveredStock = null"
+                        style="display: inline-block; position: relative;">
                         <span class="stock-name-hover">
-                          {{ stock.stockName }}
+                            {{ stock.stockName }}
                         </span>
                         <div class="stock-url-popup" *ngIf="hoveredStock === stock">
-                          <a *ngIf="stock.growwUrl" [href]="stock.growwUrl" target="_blank" title="Groww">
-                            <img src="assets/images/icons/groww.svg" alt="Groww" width="28" height="28" />
-                          </a>
-                          <a *ngIf="stock.screenerUrl" [href]="stock.screenerUrl" target="_blank" title="Screener">
-                            <img src="assets/images/icons/screener.svg" alt="Screener" width="28" height="28" />
-                          </a>
-                          <a *ngIf="stock.trendlyneUrl" [href]="stock.trendlyneUrl" target="_blank" title="Trendlyne">
-                            <img src="assets/images/icons/trndlyne.svg" alt="Trendlyne" width="28" height="28" />
-                          </a>
+                            <a *ngIf="stock.growwUrl" [href]="stock.growwUrl" target="_blank" title="Groww">
+                                <img src="assets/images/icons/groww.svg" alt="Groww" width="28" height="28" />
+                            </a>
+                            <a *ngIf="stock.screenerUrl" [href]="stock.screenerUrl" target="_blank" title="Screener">
+                                <img src="assets/images/icons/screener.svg" alt="Screener" width="28" height="28" />
+                            </a>
+                            <a *ngIf="stock.trendlyneUrl" [href]="stock.trendlyneUrl" target="_blank" title="Trendlyne">
+                                <img src="assets/images/icons/trndlyne.svg" alt="Trendlyne" width="28" height="28" />
+                            </a>
                         </div>
                     </div>
                 </td>
