--- a/stock-screener-frontend/src/app/app.component.html
+++ b/stock-screener-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar">
   <ul class="sidebar-nav">
     <li>
-      <a routerLink="/Result" routerLinkActive="active" class="sidebar-link" title="Result">
+      <a routerLink="/results" routerLinkActive="active" class="sidebar-link" title="Result">
         <img src="assets/images/icons/sidebar/result.svg" alt="Result" />
       </a>
     </li>
