Local serching implemented

--- a/stock-screener-frontend/src/app/app.component.html
+++ b/stock-screener-frontend/src/app/app.component.html
@@ -20,6 +20,10 @@
         <img src="assets/images/icons/sidebar/news.svg" alt="News" />
       </a>
     </li>
+    <li>
+      <a routerLink="/holding" routerLinkActive="active" class="sidebar-link" title="Holding">
+        <img src="assets/images/icons/sidebar/holding.svg" alt="Holding" />
+      </a>
     <!-- <li>
       <a routerLink="/screeners" routerLinkActive="active" class="sidebar-link" title="Screeners">
         <img src="assets/images/icons/sidebar/screeners.svg" alt="Screeners" />
