--- a/stock-screener-frontend/src/app/stocks/stocks.component.html
+++ b/stock-screener-frontend/src/app/stocks/stocks.component.html
@@ -1,20 +1,6 @@
-<div class="mb-4 center-modal-form">
-    <div class="mb-2">
-        <input type="text" class="form-control" [(ngModel)]="companyTerm" name="stockSymbol"
-            (input)="onSymbolInput($event)" placeholder="Enter companyDetails* (e.g., RELIANCE, TCS)"
-            autocomplete="off">
-        <!-- <small class="text-muted">Stock will be added automatically after 1 second of no typing</small> -->
-    </div>
-</div>
+<app-search></app-search>
 
-<ul class="search-results" *ngIf="searchResponseHTML" [innerHTML]="searchResponseHTML"
-    (click)="onSearchResultClick($event)"></ul>
-
-<a title="Refresh Indicators" class="refresh-icon" (click)="updateIndicatorData()">
-    <img src="assets/images/icons/refresh.svg" alt="Refresh Indicators" width="24" height="24" />
-</a>
-
-<div class="mb-5">
+<!-- <div class="mb-5">
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
@@ -49,4 +35,4 @@
             </tr>
         </tbody>
     </table>
-</div>
+</div> -->
