--- a/stock-screener-frontend/src/app/search/search.component.html
+++ b/stock-screener-frontend/src/app/search/search.component.html
@@ -2,7 +2,7 @@
   <input type="text" placeholder="Search Groww..." [(ngModel)]="searchTerm" (input)="onSearch()" class="form-control mb-3" />
 
   <ul class="list-group">
-    <li *ngFor="let stock of filteredStocks" class="list-group-item" (click)="addStock(stock)">
+    <li *ngFor="let stock of filteredStocks" class="list-group-item" (click)="stockSelected.emit(stock)">
       <div>
         <strong>{{ stock.name }}</strong><br>
         <small>Symbol: {{ stock.symbol }} | Code: {{ stock.securityCode }}</small>
@@ -11,7 +11,7 @@
   </ul>
 
   <div *ngIf="filteredStocks.length === 0 && searchTerm.trim()" class="mt-3">
-    No stocks found for "{{ searchTerm }}"
+    No stocks found using "{{ searchTerm }}" term
   </div>
 
 </div>
