List stock done also fix search collapse issue

--- a/stock-screener-frontend/src/app/search/search.component.html
+++ b/stock-screener-frontend/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <input type="text" placeholder="Search Groww..." [(ngModel)]="searchTerm" (input)="onSearch()" class="form-control mb-3" />
 
-  <ul class="list-group">
+  <ul class="list-group" *ngIf="showResults">
     <li *ngFor="let stock of filteredStocks" class="list-group-item" (click)="stockSelected.emit(stock)">
       <div>
         <strong>{{ stock.name }}</strong><br>
@@ -10,7 +10,7 @@
     </li>
   </ul>
 
-  <div *ngIf="filteredStocks.length === 0 && searchTerm.trim()" class="mt-3">
+  <div *ngIf="filteredStocks.length === 0 && searchTerm.trim() && showResults" class="mt-3">
     No stocks found using "{{ searchTerm }}" term
   </div>
 
