--- a/stock-screener-frontend/src/app/stocks/stocks.component.html
+++ b/stock-screener-frontend/src/app/stocks/stocks.component.html
@@ -22,13 +22,13 @@
                 <td>{{ stock.symbol || 'N/A' }}</td>
                 <td>{{ stock.name || 'N/A' }}</td>
                 <td>
-                  <a *ngIf="stock.growwUrl" [href]="stock.growwUrl" target="_blank" rel="noopener noreferrer" title="Groww">
+                  <a *ngIf="stock.growwUrl" [href]="stock.growwUrl" rel="noopener noreferrer" title="Groww">
                     <img src="assets/images/icons/groww.svg" alt="Groww" width="24" height="24" />
                   </a>
-                  <a *ngIf="stock.screenerUrl" [href]="stock.screenerUrl" target="_blank" rel="noopener noreferrer" title="Screener">
+                  <a *ngIf="stock.screenerUrl" [href]="stock.screenerUrl" rel="noopener noreferrer" title="Screener">
                     <img src="assets/images/icons/screener.svg" alt="Screener" width="24" height="24" />
                   </a>
-                  <a *ngIf="stock.trendlyneUrl" [href]="stock.trendlyneUrl" target="_blank" rel="noopener noreferrer" title="Trendlyne">
+                  <a *ngIf="stock.trendlyneUrl" [href]="stock.trendlyneUrl" rel="noopener noreferrer" title="Trendlyne">
                     <img src="assets/images/icons/trndlyne.svg" alt="Trendlyne" width="24" height="24" />
                   </a>
                 </td>
