Watch list code done UI work pending

--- a/stock-screener-frontend/src/app/app.component.html
+++ b/stock-screener-frontend/src/app/app.component.html
@@ -1,6 +1,11 @@
 <nav class="sidebar">
   <ul class="sidebar-nav">
     <li>
+      <a routerLink="/stocks" routerLinkActive="active" class="sidebar-link" title="Stocks">
+        <img src="assets/images/icons/sidebar/stock.svg" alt="Stocks" />
+      </a>
+    </li>
+    <li>
       <a routerLink="/results" routerLinkActive="active" class="sidebar-link" title="Result">
         <img src="assets/images/icons/sidebar/result.svg" alt="Result" />
       </a>
@@ -24,6 +29,7 @@
       <a routerLink="/holding" routerLinkActive="active" class="sidebar-link" title="Holding">
         <img src="assets/images/icons/sidebar/holding.svg" alt="Holding" />
       </a>
+    </li>
     <!-- <li>
       <a routerLink="/screeners" routerLinkActive="active" class="sidebar-link" title="Screeners">
         <img src="assets/images/icons/sidebar/screeners.svg" alt="Screeners" />
