--- a/stock-screener-frontend/src/app/results/results.component.html
+++ b/stock-screener-frontend/src/app/results/results.component.html
@@ -1,4 +1,10 @@
+
+
 <div class="mb-5">
+    <button class="btn" [class.btn-primary]="!isTriggered" [class.btn-success]="isTriggered" type="button" (click)="fetchResults()" [disabled]="isLoading">
+        <span *ngIf="isLoading" class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+        <span role="status">{{ isLoading ? 'Loading...' : 'Fetch Latest Results' }}</span>
+    </button>
     <table class="table table-striped table-hover">
         <thead>
             <tr>
