Home page is ready

--- a/stock-screener-frontend/src/app/app.component.html
+++ b/stock-screener-frontend/src/app/app.component.html
@@ -1,6 +1,11 @@
 <nav class="sidebar">
   <ul class="sidebar-nav">
     <li>
+      <a routerLink="/home" routerLinkActive="active" class="sidebar-link" title="Home">
+        <img src="assets/images/icons/sidebar/home.svg" alt="Home" />
+      </a>
+    </li>
+    <li>
       <a routerLink="/stocks" routerLinkActive="active" class="sidebar-link" title="Stocks">
         <img src="assets/images/icons/sidebar/stock.svg" alt="Stocks" />
       </a>
