--- a/stock-screener-frontend/src/app/home/home.component.html
+++ b/stock-screener-frontend/src/app/home/home.component.html
@@ -1,31 +1,24 @@
 <div class="container">
-  <h2>Add Description Link</h2>
-<form [formGroup]="linkForm" (ngSubmit)="saveLink()">
-    <div class="form-group">
-      <label for="description">Description:</label>
-      <input type="text" id="description" formControlName="description" class="form-control" required>
-    </div>
-    <div class="form-group">
-      <label for="url">URL:</label>
-      <input type="url" id="url" formControlName="url" class="form-control" required>
-    </div>
-    <button type="submit" [disabled]="!linkForm.valid" class="btn btn-primary">Save</button>
-  </form>
+  <div class="form-group">
+    <input type="url" id="url" [(ngModel)]="url" class="form-control" placeholder="Enter URL to be added" (keydown.enter)="onEnterKey($event)" required>
+  </div>
 
   <h2 class="mt-4">Description Links</h2>
   <table class="table table-striped">
     <thead>
       <tr>
-        <th>ID</th>
+        <!-- <th>ID</th> -->
         <th>Description</th>
         <th>Link</th>
+        <th>Action</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let link of links">
-        <td>{{ link.id }}</td>
+        <!-- <td>{{ link.id }}</td> -->
         <td>{{ link.description }}</td>
-        <td><a [href]="link.url">Link</a></td>
+        <td><a [href]="link.url">{{ link.url }}</a></td>
+        <td><button class="btn btn-sm btn-outline-danger" style="font-size: 12px; padding: 2px 6px;" (click)="deleteLink(link.id)">DELETE</button></td>
       </tr>
     </tbody>
   </table>
