Added functionality for home

--- a/stock-screener-frontend/src/app/app.component.html
+++ b/stock-screener-frontend/src/app/app.component.html
@@ -6,6 +6,11 @@
       </a>
     </li>
     <li>
+      <a routerLink="/allStocks" routerLinkActive="active" class="sidebar-link" title="All Stocks">
+        <img src="assets/images/icons/sidebar/all.svg" alt="Home" />
+      </a>
+    </li>
+    <li>
       <a routerLink="/stocks" routerLinkActive="active" class="sidebar-link" title="Stocks">
         <img src="assets/images/icons/sidebar/stock.svg" alt="Stocks" />
       </a>
@@ -16,7 +21,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="/stocks" routerLinkActive="active" class="sidebar-link" title="Sector Analysis">
+      <a routerLink="/sector-analysis" routerLinkActive="active" class="sidebar-link" title="Sector Analysis">
         <img src="assets/images/icons/sidebar/sector-analysis.svg" alt="Sector Analysis" />
       </a>
     </li>
