--- a/stock-screener-frontend/src/app/stock/stock.html
+++ b/stock-screener-frontend/src/app/stock/stock.html
@@ -40,49 +40,51 @@
   </div>
 </div>
 
-<app-search (stockSelected)="onStockSelected($event)"></app-search>
+<div *ngIf="watchlists().length > 0">
+  <app-search (stockSelected)="onStockSelected($event)"></app-search>
 
-<div class="mb-5">
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th><input type="checkbox" /></th>
-        <th>Symbol</th>
-        <th>Name</th>
-        <th>Analytics Links</th>
-        <th>RSI</th>
-        <th>MFI</th>
-        <!-- <th>ALERT</th>
-                <th>SIGNAL DT</th>
-                <th>STATUS</th>
-                <th>ENTRY</th> -->
-      </tr>
-    </thead>
-    <tbody>
-      @for (stock of stocks; track stock.symbol) {
-      <tr>
-        <td><input type="checkbox" /></td>
-        <td>{{ stock.symbol || 'N/A' }}</td>
-        <td>{{ stock.name || 'N/A' }}</td>
-        <td>
-          <a *ngIf="stock.growwUrl" [href]="stock.growwUrl" rel="noopener noreferrer" title="Groww">
-            <img src="groww.svg" alt="Groww" width="24" height="24" />
-          </a>
-          <a *ngIf="stock.screenerUrl" [href]="stock.screenerUrl" rel="noopener noreferrer" title="Screener">
-            <img src="assets/images/icons/screener.svg" alt="Screener" width="24" height="24" />
-          </a>
-          <a *ngIf="stock.trendlyneUrl" [href]="stock.trendlyneUrl" rel="noopener noreferrer" title="Trendlyne">
-            <img src="assets/images/icons/trndlyne.svg" alt="Trendlyne" width="24" height="24" />
-          </a>
-        </td>
-        <td>{{ stock.rsi || 'N/A' }}</td>
-        <td>{{ stock.mfi || 'N/A' }}</td>
-        <!-- <td>{{ stock.alert || 'N/A' }}</td>
-                <td>{{ stock.signalDt || 'N/A' }}</td>
-                <td>{{ stock.status || 'N/A' }}</td>
-                <td>{{ stock.entry || 'N/A' }}</td> -->
-      </tr>
-      }
-    </tbody>
-  </table>
+  <div class="mb-5">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th><input type="checkbox" /></th>
+          <th>Symbol</th>
+          <th>Name</th>
+          <th>Analytics Links</th>
+          <th>RSI</th>
+          <th>MFI</th>
+          <!-- <th>ALERT</th>
+                  <th>SIGNAL DT</th>
+                  <th>STATUS</th>
+                  <th>ENTRY</th> -->
+        </tr>
+      </thead>
+      <tbody>
+        @for (stock of stocks; track stock.symbol) {
+        <tr>
+          <td><input type="checkbox" /></td>
+          <td>{{ stock.symbol || 'N/A' }}</td>
+          <td>{{ stock.name || 'N/A' }}</td>
+          <td>
+            <a *ngIf="stock.growwUrl" [href]="stock.growwUrl" rel="noopener noreferrer" title="Groww">
+              <img src="groww.svg" alt="Groww" width="24" height="24" />
+            </a>
+            <a *ngIf="stock.screenerUrl" [href]="stock.screenerUrl" rel="noopener noreferrer" title="Screener">
+              <img src="assets/images/icons/screener.svg" alt="Screener" width="24" height="24" />
+            </a>
+            <a *ngIf="stock.trendlyneUrl" [href]="stock.trendlyneUrl" rel="noopener noreferrer" title="Trendlyne">
+              <img src="assets/images/icons/trndlyne.svg" alt="Trendlyne" width="24" height="24" />
+            </a>
+          </td>
+          <td>{{ stock.rsi || 'N/A' }}</td>
+          <td>{{ stock.mfi || 'N/A' }}</td>
+          <!-- <td>{{ stock.alert || 'N/A' }}</td>
+                  <td>{{ stock.signalDt || 'N/A' }}</td>
+                  <td>{{ stock.status || 'N/A' }}</td>
+                  <td>{{ stock.entry || 'N/A' }}</td> -->
+        </tr>
+        }
+      </tbody>
+    </table>
+  </div>
 </div>
